tests/tools/trip/randomTrips/errors/testsuite.tools
# This test checks that unrecognized options to be forwarded are indeed reported.
unrecognized_options_to_be_forwarded

# Test for invalid vclass/edge-permission values.
invalid_vclass_edge-permission

# Test for invalid vehicle-class values.
invalid_vehicle_class

# Test for the conflict between arguments --period and --insertion-rate.
period_insertion_rate_conflict

# Test for the conflict between arguments --insertion-rate and --insertion-density.
insertion_rate_insertion_density_conflict

# Test for the conflict between arguments --period and --insertion-density.
period_insertion_density_conflict

# Test for giving an unknown option
unknown_option
fringe_factor_invalid
